# aiagent-rag

./: .env.example  .gitignore  README.md  config.py  guide.md  llm_factory.py  main.py  project_overview.md  pyproject.toml
agent/: __init__.py  graph.py  runner.py
data/: ingest.py
data/knowledge_base/: CMAKE.md  cmake - multi module project.md  cmake - template and automate.md  cmake overview.md  coaching_notes.md  product_catalog.md  rep_guidelines.md
memory/: __init__.py  conversation_memory.py
rag/: __init__.py  embeddings.py  vector_store.py
tools/: __init__.py  rag_tool.py  rep_tools.py  utility_tools.py
