[project]
name = "aiagent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "tiktoken>=0.13.0",
]
